# JWDM

./: .gitignore  AGENTS.md  Build.ps1  JWDM.spec  PROJECT_CONTEXT.md  README.md  pyproject.toml
assets/: JWDM.version
docs/: RELEASE.md
installer/: JWDM.iss
scripts/: Sign-Artifact.ps1  generate_icon.py
src/jwdm/: __init__.py  config.py  logging_config.py  main.py
src/jwdm/app/: __init__.py  automatic_organize.py  manual_organize.py  settings.py
src/jwdm/classification/: __init__.py  archive_classifier.py  extension_classifier.py  image_classifier.py  rule_classifier.py  smart_classifier.py  texture_classifier.py
src/jwdm/persistence/: __init__.py  history.py  state.py
src/jwdm/pipeline/: __init__.py  candidate.py  models.py  result.py
src/jwdm/services/: __init__.py  automatic_organizer.py  candidate_registry.py  destinations.py  downloads.py  exclusions.py  folder_snapshot.py  library_destination.py  move_transaction.py  operation_suppression.py  path_validation.py  rule_suggestions.py  scan.py  startup.py  (+1 more)
tests/: conftest.py  test_access_probe.py  test_automatic_organizer.py  test_candidate_registry.py  test_classification.py  test_destinations.py  test_directory_watcher.py  test_downloads_relocation.py  test_history.py  test_manual_organize.py  test_move_transaction.py  test_path_validation.py  test_readiness_stages.py  test_release_packaging.py  test_rule_classifier.py  test_rule_suggestions.py  test_scan.py  test_settings_controller.py  test_smart_classification.py  test_smoke.py  test_startup.py  test_state_persistence.py  test_volumes.py
(+15 files in other folders)
