[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jwdm"
version = "1.0.0"
description = "Jeebus' Windows Download Manager"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "Pillow==12.3.0",
    "PySide6==6.11.1",
    "watchdog==6.0.0",
]

[project.optional-dependencies]
build = ["PyInstaller==6.21.0"]
test = ["pytest==9.1.1"]

[project.gui-scripts]
jwdm = "jwdm.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]
